tests/transpiler/x/rs/map_assign.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:42 +0700
use std::collections::HashMap;
fn main() {
    let mut scores: HashMap<&str, i64> = HashMap::from([("alice", 1)]);
    scores[&"bob"] = 2;
    println!("{}", scores[&"bob"]);
}
